# oldnbr-evaluation

./: .gitignore  CMakeLists.txt  README.md
lib/: case-study.hpp
run/: batch.cpp  graphic.cpp  runner.cpp
